# schnephro

./: .gitignore  README.md  docker-compose-example.yml  etc.txt  nginx_443.conf  nginx_80.conf  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/accounts/: models.py  serializers.py  views.py
backend/backend/: settings.py  urls.py  utils.py  views.py
backend/bx/: admin.py  choices.py  models.py  serializers.py  views.py
backend/templates/: base.html  css.html  js.html  react.html
backend/templates/account/email/: base_message.txt  password_reset_key_message.txt
frontend/: package-lock.json  package.json
scripts/: migration.sh  rm_files.sh
